2000-03-03  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (SOCKET-SERVER): In the error message, output the argument,
          not the symbol STREAM.

2000-03-03  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * defmacro.lsp (macro-call-error): Add missing ~S to English
        translation.
        * describe.lsp (describe-object): Fix English message.
        Reported by Tijs van Bakel <smoke@casema.net>.

2000-02-29  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (sbNvector_atype, bNvector_atype, type_bits_to_atype):
          New macros.
        * array.d (copy_sbvector, array_element_type, test_displaced): Use
          sbNvector_atype and bNvector_atype.
        * hashtabl.d (hashcode_bvector): Use sbNvector_atype.
        * sequence.d (get_seq_type): Use sbNvector_atype and bNvector_atype.

2000-02-25  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * makemake.in: Don't install emacs/*.el any more.

2000-02-22  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * arimips.d (subx_loop_down): If compiling for n32 ABI, the fifth
          argument comes in a register, not from the stack.

2000-02-18  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (oint_symbolflags_shift): Remove obsolete definition.

2000-01-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Permit setting *terminal-encoding* to an iconv based stream.
        * lispbibl.d (set_terminalstream_external_format): New declaration.
        * stream.d (set_terminalstream_external_format): New function.
        * encoding.d (SYSTEM::SET-FOREIGN-ENCODING): Call it.

2000-01-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * errunix.d (init_errormsg_table): Add EILSEQ.

2000-01-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * encoding.d (encoding_from_name): Recognize ISO-8859-3.

2000-01-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
