@@ -294,7 +294,9 @@ LISPFUN(make_encoding,0,0,norest,key,4,
         (kw(charset),kw(line_terminator),kw(input_error_action),kw(output_error_action)) )
 LISPFUNN(encodingp,1)
 LISPFUNN(charset_typep,2)
+#ifdef UNICODE
 LISPFUNN(charset_range,3)
+#endif
 LISPFUNN(default_file_encoding,0)
 LISPFUNN(set_default_file_encoding,1)
 #ifdef UNICODE
